--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Apri la console per vedere i risultati</h1>
-    <script src="assets/js/D4.js"></script>
+    <script src="assets/js/D4-EXTRA.js"></script>
   </body>
 </html>
